- Thread implemented to improve performance. - Added text status display to provide information during the operation. - Implemented a status bar to show the progress of the task.

--- a/PowerSearch/PowerSearch.csproj
+++ b/PowerSearch/PowerSearch.csproj
@@ -35,19 +35,35 @@
     <ApplicationIcon>pSearch.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Data.Desktop.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Data.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Printing.v21.2.Core, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Utils.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.XtraEditors.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.XtraGrid.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraLayout.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.XtraPrinting.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Data.Desktop.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.Data.Desktop.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.Data.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.Data.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.Printing.v21.2.Core">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.Printing.v21.2.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.Utils.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.Utils.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.XtraEditors.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.XtraEditors.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.XtraGrid.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.XtraGrid.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.XtraLayout.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.XtraLayout.v21.2.dll</HintPath>
+    </Reference>
+    <Reference Include="DevExpress.XtraPrinting.v21.2">
+      <HintPath>D:\Projects\PowerSearch\PowerSearch\bin\Debug\DevExpress.XtraPrinting.v21.2.dll</HintPath>
+    </Reference>
     <Reference Include="FastColoredTextBox">
-      <HintPath>..\..\..\Dlls\FastColoredTextBox.dll</HintPath>
+      <HintPath>D:\Projects\SSManager\SSManager\bin\Debug\FastColoredTextBox.dll</HintPath>
     </Reference>
     <Reference Include="Ookii.Dialogs">
-      <HintPath>..\..\..\Dlls\Ookii.Dialogs.dll</HintPath>
+      <HintPath>D:\Dlls\Ookii.Dialogs.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
